# ipytoolbox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  pre-commit.yaml
autocuda/: __init__.py
ipytoolbox/: magics.py
notebooks/: demo.ipynb
src/ipytoolbox/: __init__.py  magics.py
tests/: test.py  test_magics.py
