[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autocuda"
authors = [{ name = "Carl Thomé", email = "carlthome@gmail.com" }]
description = "TODO"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = ["ipython"]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/carlthome/autocuda"
Bugs = "https://github.com/carlthome/autocuda/issues"

[tool.setuptools_scm]
write_to = "autocuda/version.py"
local_scheme = "no-local-version"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.autoflake]
remove-all-unused-imports = true
